--- a/en/b-lista.html
+++ b/en/b-lista.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="noindex">
-  <title>Boardgames list</title>
+  <title>Lautapelilista</title>
 
   <!-- 
     - favicon
@@ -179,19 +179,19 @@
       <div class="game-tabs-container">
         <div class="game-tabs">
           <a href="v-list.html" class="game-tab skewBg">Videogames</a>
-          <a href="b-list.html" class="game-tab active skewBg2">Boardgames</a>
+          <a href="b-lista.html" class="game-tab active skewBg2">Boardgames</a>
         </div>
         <div class="language-switcher" style="margin-top:15px">
-          <a href="b-lista.html">FIN</a>
-          <a href="b-list.html" class="active">ENG</a>
+          <a href="b-lista.html" class="active">FIN</a>
+          <a href="b-list.html">ENG</a>
         </div>
       </div>
 
       <!-- Date Selection -->
       <div class="date-selection-container">
-        <label for="visit-date-select">Select visit date:</label>
+        <label for="visit-date-select">Valitse vierailupäivä:</label>
         <select id="visit-date-select" class="visit-date-select">
-          <option value="">Choose a date...</option>
+          <option value="">Valitse päivä...</option>
           <option value="2026-02-27">27.02.2026</option>
           <option value="2026-03-06">06.03.2026</option>
           <option value="2026-03-13">13.03.2026</option>
@@ -205,10 +205,10 @@
         <div class="welcome-message-content">
           <ion-icon name="information-circle-outline"></ion-icon>
           <div class="welcome-message-text">
-            <p>Browse our boardgame collection and reserve games for your visit at the weeklies.</p>
-            <p>Select a date before adding games to your reservation.</p>
+            <p>Selaa lautapelikokoelmaamme ja varaa pelejä viikoittaisiin tapaamisiin.</p>
+            <p>Valitse päivämäärä ennen pelien lisäämistä varaukseen.</p>
           </div>
-          <button id="welcome-message-close" class="welcome-message-close" title="Close">
+          <button id="welcome-message-close" class="welcome-message-close" title="Sulje">
             <ion-icon name="close-outline"></ion-icon>
           </button>
         </div>
@@ -223,18 +223,18 @@
           <!-- Search Bar Row -->
           <div class="search-row">
             <div class="search-box">
-              <input type="text" id="game-search" placeholder="enter search term or tag">
-              <button id="search-btn" class="search-button">Search</button>
+              <input type="text" id="game-search" placeholder="Syötä hakusana tai tagi">
+              <button id="search-btn" class="search-button">Hae</button>
             </div>
             <div class="sort-box">
-              <label for="sort-select">Sort by</label>
+              <label for="sort-select">Järjestä</label>
               <select id="sort-select">
-                <option value="name-asc">Name A-Z</option>
-                <option value="name-desc">Name Z-A</option>
-                <option value="playtime-short">Playtime (Shortest)</option>
-                <option value="playtime-long">Playtime (Longest)</option>
-                <option value="date-new">Release Date (Newest)</option>
-                <option value="date-old">Release Date (Oldest)</option>
+                <option value="name-asc">Nimi A-Ö</option>
+                <option value="name-desc">Nimi Ö-A</option>
+                <option value="playtime-short">Peliaika (Lyhin)</option>
+                <option value="playtime-long">Peliaika (Pisin)</option>
+                <option value="date-new">Julkaisupäivä (Uusin)</option>
+                <option value="date-old">Julkaisupäivä (Vanhin)</option>
               </select>
             </div>
             <!-- Mobile filter toggle button -->
@@ -245,7 +245,7 @@
 
           <!-- Results count -->
           <div class="results-info">
-            <span id="results-count">0 results</span>
+            <span id="results-count">0 tulosta</span>
           </div>
 
           <!-- Game List -->
@@ -259,12 +259,13 @@
         <aside id="filter-sidebar" class="filter-sidebar">
           <!-- Cart buttons (desktop) -->
           <div class="cart-buttons-row desktop-only">
-            <a href="reserve.html" id="cart-icon-btn" class="cart-icon-btn" style="height:42px" title="Cart (empty)">
+            <a href="reserve.html" id="cart-icon-btn" class="cart-icon-btn" style="height:42px"
+              title="Ostoskori (tyhjä)">
               <ion-icon name="reader-outline"></ion-icon>
               <span id="cart-badge" class="cart-badge" style="display: none;">0</span>
-              <span class="cart-label">Reserve</span>
+              <span class="cart-label">Varaa</span>
             </a>
-            <button id="cart-clear-btn" class="cart-clear-btn" title="Clear cart">
+            <button id="cart-clear-btn" class="cart-clear-btn" title="Tyhjennä kori">
               <ion-icon name="trash-outline"></ion-icon>
             </button>
           </div>
@@ -280,11 +281,11 @@
 
         <!-- Cart buttons (mobile) -->
         <div class="cart-buttons-row mobile-only">
-          <a href="reserve.html" id="cart-icon-btn-mobile" class="cart-icon-btn" title="Cart (empty)">
+          <a href="reserve.html" id="cart-icon-btn-mobile" class="cart-icon-btn" title="Ostoskori (tyhjä)">
             <ion-icon name="reader-outline"></ion-icon>
             <span id="cart-badge-mobile" class="cart-badge" style="display: none;">0</span>
           </a>
-          <button id="cart-clear-btn-mobile" class="cart-clear-btn" title="Clear cart">
+          <button id="cart-clear-btn-mobile" class="cart-clear-btn" title="Tyhjennä kori">
             <ion-icon name="trash-outline"></ion-icon>
           </button>
         </div>
@@ -330,7 +331,7 @@
   -->
   <script src="../assets/js/script.js" defer></script>
   <script src="../assets/js/cart.js" defer></script>
-  <script src="../assets/js/boardgameslist.js" defer></script>
+  <script src="../assets/js/boardgameslist-fi.js" defer></script>
 
 
   <!-- 
