--- a/en/reserve.html
+++ b/en/reserve.html
@@ -280,6 +280,7 @@
   <!--
     - custom js link
   -->
+  <script src="../assets/js/config.js"></script>
   <script src="../assets/js/script.js" defer></script>
   <script src="../assets/js/cart.js" defer></script>
   <script src="../assets/js/checkout.js" defer></script>
