--- a/en/reserve.html
+++ b/en/reserve.html
@@ -54,24 +54,24 @@
             </li>
 
             <li class="navbar-item">
-            <a href="boardgames.html" class="navbar-link skewBg2" data-nav-link>Board games club</a>
+              <a href="boardgames.html" class="navbar-link skewBg2" data-nav-link>Board games club</a>
             </li>
 
             <li class="navbar-item">
-            <a href="videogames.html" class="navbar-link skewBg2" data-nav-link>Video games club</a>
+              <a href="videogames.html" class="navbar-link skewBg2" data-nav-link>Video games club</a>
             </li>
 
             <li class="navbar-item">
-                  <a href="lahtifgc_eng.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
-                  </li>
+              <a href="lahtifgc_eng.html" class="navbar-link skewBg" data-nav-link>Lahti FGC</a>
+            </li>
 
             <li class="navbar-item">
-                  <a href="gallery.html" class="navbar-link skewBg" data-nav-link>Gallery</a>
-                  </li>
+              <a href="gallery.html" class="navbar-link skewBg" data-nav-link>Gallery</a>
+            </li>
 
             <li class="navbar-item">
-                  <a href="about.html" class="navbar-link skewBg" data-nav-link>About us</a>
-                  </li>
+              <a href="about.html" class="navbar-link skewBg" data-nav-link>About us</a>
+            </li>
 
           </ul>
         </nav>
@@ -90,7 +90,7 @@
 
   </header>
 
-    <!-- 
+  <!-- 
     -----------------------------------------------
         MARK: #Checkout
     -----------------------------------------------
@@ -102,14 +102,14 @@
       <!-- Main Checkout View -->
       <div id="checkout-main" class="checkout-container">
 
-      <div class="checkout-title-wrapper">
-        <a href="v-list.html" class="back-to-list-btn" title="Back to games" style="margin-top:-140px">
-          <ion-icon name="arrow-back-outline"></ion-icon>
-        </a>
-        <h1 class="checkout-title">Reservation
-          <span style="font-size:27px"> for the next weekly</span>
-        </h1>
-      </div>
+        <div class="checkout-title-wrapper">
+          <a href="v-list.html" class="back-to-list-btn" title="Back to games" style="margin-top:-140px">
+            <ion-icon name="arrow-back-outline"></ion-icon>
+          </a>
+          <h1 class="checkout-title">Reservation
+            <span style="font-size:27px"> for the next weekly</span>
+          </h1>
+        </div>
 
 
         <!-- Previous Cart Section -->
@@ -169,7 +169,7 @@
               <input type="email" id="input-email" name="email" placeholder="your@email.com">
             </div>
             <br>
-            <div class="form-group">
+            <div class="form-group" id="controller-form-group">
               <label for="input-controller">Preferred Input Method</label>
               <select id="input-controller" name="controller">
                 <option value="controller">Controller</option>
@@ -179,7 +179,8 @@
             <br>
             <div class="form-group">
               <label for="input-additional">Additional Info (optional)</label>
-              <textarea id="input-additional" name="additionalInfo" rows="3" placeholder="Any special requests or notes..."></textarea>
+              <textarea id="input-additional" name="additionalInfo" rows="3"
+                placeholder="Any special requests or notes..."></textarea>
             </div>
 
           </div>
@@ -259,17 +260,17 @@
   <br>
   <br>
 
-  <footer class="footer" id="footer">    
+  <footer class="footer" id="footer">
 
-     <div class="footer-bottom">
+    <div class="footer-bottom">
       <div class="container">
 
-    <p class="copyright">
-      &copy; 2026 Kaptam Gamers ry All Right Reserved.
-      Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a>
-      & <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
-      Gamelist site's <a href="privacy.html" class="copyright-link">privacy policy</a>.
-    </p>
+        <p class="copyright">
+          &copy; 2026 Kaptam Gamers ry All Right Reserved.
+          Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a>
+          & <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
+          Gamelist site's <a href="privacy.html" class="copyright-link">privacy policy</a>.
+        </p>
 
       </div>
     </div>
