--- a/en/b-list.html
+++ b/en/b-list.html
@@ -134,6 +134,12 @@
               <a href="about.html" class="navbar-link skewBg" data-nav-link>About us</a>
             </li>
 
+            <li class="navbar-item">
+              <a href="b-lista.html" class="navbar-link skewBg" data-nav-link>
+                <span class="fi fi-fi" style="font-size: 1.3em;"></span>
+              </a>
+            </li>
+
           </ul>
         </nav>
 
@@ -167,10 +173,9 @@
         <div class="game-tabs">
           <a href="v-list.html" class="game-tab skewBg">Videogames</a>
           <a href="b-list.html" class="game-tab active skewBg2">Boardgames</a>
-        </div>
-        <div class="language-switcher" style="margin-top:15px">
-          <a href="b-lista.html">FIN</a>
-          <a href="b-list.html" class="active">ENG</a>
+          <a href="b-lista.html"class="game-tab skewBg" style="padding:12px 15px">FIN</a>
+          <a href="b-list.html" class="game-tab active skewBg2" style="padding:12px 15px;">ENG</a>
+          
         </div>
       </div>
 
@@ -210,7 +215,7 @@
           <!-- Search Bar Row -->
           <div class="search-row">
             <div class="search-box">
-              <input type="text" id="game-search" placeholder="enter search term or tag">
+              <input type="text" id="game-search" placeholder="Enter search term or tag">
               <button id="search-btn" class="search-button">Search</button>
             </div>
             <div class="sort-box">
