--- a/en/b-lista.html
+++ b/en/b-lista.html
@@ -134,6 +134,12 @@
               <a href="about.html" class="navbar-link skewBg" data-nav-link>About us</a>
             </li>
 
+            <li class="navbar-item">
+              <a href="b-list.html" class="navbar-link skewBg" data-nav-link>
+                <span class="fi fi-gb" style="font-size: 1.3em;"></span>
+              </a>
+            </li>
+
           </ul>
         </nav>
 
@@ -167,10 +173,8 @@
         <div class="game-tabs">
           <a href="v-list.html" class="game-tab skewBg">Videogames</a>
           <a href="b-lista.html" class="game-tab active skewBg2">Boardgames</a>
-        </div>
-        <div class="language-switcher" style="margin-top:15px">
-          <a href="b-lista.html" class="active">FIN</a>
-          <a href="b-list.html">ENG</a>
+          <a href="b-lista.html" class="game-tab active skewBg2" style="padding:12px 15px">FIN</a>
+          <a href="b-list.html" class="game-tab skewBg" style="padding:12px 15px">ENG</a>
         </div>
       </div>
 
@@ -305,6 +309,8 @@
           &copy; 2026 Kaptam Gamers ry All Right Reserved.
           Website made by <a href="https://github.com/Kyouma960" class="copyright-link">Kyouma960</a>
           and <a href="https://github.com/heikki-kaperi" class="copyright-link">heikki-kaperi</a>.
+          Gamelist site's <a href="privacy.html" class="copyright-link">privacy policy</a>.
+          </p>
         </p>
 
       </div>
