--- a/en/v-list.html
+++ b/en/v-list.html
@@ -153,7 +153,7 @@
           <!-- Search Bar Row -->
           <div class="search-row">
             <div class="search-box">
-              <input type="text" id="game-search" placeholder="enter search term or tag">
+              <input type="text" id="game-search" placeholder="Enter search term or tag">
               <button id="search-btn" class="search-button">Search</button>
             </div>
             <div class="sort-box">
