--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BlazBlue turnaus</title>
+  <title>GBVSR turnaus</title>
 
   <!-- 
     - favicon
@@ -112,7 +112,7 @@
 		-->
 	  
        <section class="section hero" id="home" aria-label="home"
-        style="background-image: url('../assets/images/fighting-background6.jpg')">
+        style="background-image: url('../assets/images/fighting-background7.jpg')">
         <div class="container">
 
           <div class="hero-content">
@@ -122,7 +122,7 @@
 			
               
              Taistelupeliturnaus 
-             <span ><img src="../assets/images/events_images/blazblue_logo.png" loading="lazy"
+             <span ><img src="../assets/images/events_images/gbvsr.png" loading="lazy"
                   alt="BlazBlue Turnaus"
                   title="BlazBlue" style="width: 75%; height: 75%;"></span>
              
@@ -144,22 +144,22 @@
 			<table style="border:0; color: orange; font-size: 40px; margin: 0px auto; background-color:black; border-radius: 25px; padding: 10px;">
 			  <tr>
 				<td>1st</td>
-				<td>40 €</td>
-			  </tr>
-			  <tr>
-				<td>2nd &nbsp;</td>
 				<td>20 €</td>
 			  </tr>
 			  <tr>
-				<td>3rd</td>
+				<td>2nd &nbsp;</td>
 				<td>10 €</td>
+			  </tr>
+			  <tr>
+				<td>3rd</td>
+				<td>5 €</td>
 			  </tr>
 			</table>
 
 			<br>
 			<br>
 
-            <a href="https://challonge.com/tournaments/signup/h5XeIMi1mN#/signup/tp3i1s1ye1" target="_blank"> <button class="btn skewBg" style="color: black;">
+            <a href="https://challonge.com/fi/lahti_gbvsr_2026" target="_blank"> <button class="btn skewBg" style="color: black;">
 			Jos olet kiinnostunut  
 			<br>
 			turnauksesta, liity
@@ -285,7 +285,7 @@
           Maksullinen parkeeraus loppui klo 16, niin missä vain <br>
 					<br>
 					~ Aika ~ <br>
-					27.12.2025 Lauantai @ 14:00 - 22:00
+					15.03.2026 Sunnuntai @ 14:00 - 22:00
           <br>
           15:00 Ilmottautumiset turnaukseen loppuu
           <br>
@@ -294,7 +294,9 @@
 					<br>
 					~ Turnauksen peli ~ 
 					<br>
-					BlazBlue Centralfiction
+          Granblue Fantasy Versus: Rising
+          <br>
+          (PC:llä steam:issä)
 					</span>
 					<span style="font-size: 12px; text-align:left">
           ~ Säännöt ~
@@ -308,30 +310,44 @@
           Yhden matsin jälkeen, hävinnyt pelaaja voi vaihtaa hahmoa. Voittaneen pelaajan pitää pelata samalla hahmolla kuin viime matsissa
           <br>
           <br>
-          Liikeiden inputtien yksinkertainen tila on kielletty
+          Pelin sisäisen ohjainmoodin pitää olla Manual (Ei Smart tai Super Ultimate)
           <br>
           <br>
           Pelaajille on käytettävissä turnauksen ohjaimia (xbox 360 tyylin ohjaimia, pari PS4 ohjainta), mutta voit tuoda oman ohjaimen. Ainoa poikkeus on ohjain, jossa on sisäänrakennetut makropainikkeet
+          <br>
+          <br>
+          Lunalo (random hahmo valinta) ei ole sallittu
+          <br>
+          <br>
+          Random taso valinta (pelaajat voivat kanssa päättää yhdessä, jos haluavat tietyn tason)
           <br>
 					</span>
 					<span style="text-align:left">
 					~ Viime turnauksen haarukointi ~ 
 					<br>
+          27.12.2025 - BlazBlue Centralfiction
+          <a href="https://challonge.com/796mqzof" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a>
+          <a href="https://www.youtube.com/watch?v=MDyu4Xejh0U" target="_blank"
+            style="color: DodgerBlue; margin-top:5px"><u>Vanilla kooste youtubessa</u></a>
+          <a href="https://www.twitch.tv/videos/2654155307" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Streemi
+              twitch:ssä</u></a>
+          ~~~
+          <br>
         	24.10.2025 - Vampire Savior
 					<a href="https://challonge.com/2v6m2n82/" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
-					<a href="https://www.youtube.com/watch?v=2PPBKqMXhos" target="_blank" style="color: DodgerBlue;"><u>Editoitu streemi youtubessa</u></a>
-          <a href="q" target="_blank" style="color: DodgerBlue;"><u>Instagram kuvat</u></a>
+					<a href="https://www.youtube.com/watch?v=2PPBKqMXhos" target="_blank" style="color: DodgerBlue;margin-top:5px"><u>Editoitu streemi youtubessa</u></a>
+          <a href="q" target="_blank" style="color: DodgerBlue;margin-top:5px"><u>Instagram kuvat</u></a>
           ~~~
           <br>
 					12.09.2025 - Tekken 7
 					<a href="https://challonge.com/e058cby9" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a> 
-					<a href="https://www.youtube.com/watch?v=LLHLs1lGuPo" target="_blank" style="color: DodgerBlue;"><u>Editoitu streemi youtubessa</u></a>
-          <a href="https://www.instagram.com/p/DOmz84LCmvM/?img_index=1" target="_blank" style="color: DodgerBlue;"><u>Instagram kuvat</u></a>
+					<a href="https://www.youtube.com/watch?v=LLHLs1lGuPo" target="_blank" style="color: DodgerBlue;margin-top:5px"><u>Editoitu streemi youtubessa</u></a>
+          <a href="https://www.instagram.com/p/DOmz84LCmvM/?img_index=1" target="_blank" style="color: DodgerBlue;margin-top:5px"><u>Instagram kuvat</u></a>
           ~~~
           <br>
           07.08.2025 - Street Fighter 6
           <a href="https://challonge.com/pxvmrgyo" target="_blank" style="color: DodgerBlue;"><u>Tulokset: Challonge</u></a>
-          <a href="https://www.youtube.com/watch?v=v8gaf_Mdi5U" target="_blank" style="color: DodgerBlue;"><u>Viimeinen matsi youtubessa</u></a>
+          <a href="https://www.youtube.com/watch?v=v8gaf_Mdi5U" target="_blank" style="color: DodgerBlue;margin-top:5px"><u>Viimeinen matsi youtubessa</u></a>
           <a href="https://www.instagram.com/p/DNFqV4osoei/?img_index=1" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Instagram kuvat</u></a>
           ~~~
           <br>
