--- a/en/fighting.html
+++ b/en/fighting.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BlazBlue Tournament</title>
+  <title>GBVSR Tournament</title>
 
   <!-- 
     - favicon
@@ -113,7 +113,7 @@
 
 	  
        <section class="section hero" id="home" aria-label="home"
-        style="background-image: url('../assets/images/fighting-background6.jpg')">
+        style="background-image: url('../assets/images/fighting-background7.jpg')">
         <div class="container">
 
           <div class="hero-content">
@@ -121,7 +121,7 @@
 
             <h1 class="h1 hero-title" style="font-size: 45px;">
 			
-              Fighting game tournament <span><img src="../assets/images/events_images/blazblue_logo.png"  loading="lazy"
+              Fighting game tournament <span><img src="../assets/images/events_images/gbvsr.png"  loading="lazy"
                   alt="BlazBlue Tournament"
                   title="BlazBlue" style="width: 75%; height: 75%;"></span>
             </h1>
@@ -130,7 +130,7 @@
 			Open tournament for new and experienced fighting game players to have fun. We have many PC setups, where you can play with and controller. You don't need to bring anything. Event is also streamed in twitch, in the channel:
       <a href="https://www.twitch.tv/juusodotexe" target="_blank" style="font-size: 2rem; font-weight:bold;color: DodgerBlue; "><u>Juusodotexe </u></a>
 			<br>
-			Free for anybody over 12 years old to join in.
+			Free for anybody over 16 years old to join in.
 
 			</span></p>
 
@@ -142,22 +142,22 @@
 			<table style="border:0; color: orange; font-size: 40px; margin: 0px auto; background-color:black; border-radius: 25px; padding: 10px;">
 			  <tr>
 				<td>1st</td>
-				<td>40 €</td>
-			  </tr>
-			  <tr>
-				<td>2nd &nbsp;</td>
 				<td>20 €</td>
 			  </tr>
 			  <tr>
-				<td>3rd</td>
+				<td>2nd &nbsp;</td>
 				<td>10 €</td>
+			  </tr>
+			  <tr>
+				<td>3rd</td>
+				<td>5 €</td>
 			  </tr>
 			</table>
 
 			<br>
 			<br>
 
-            <a href="https://challonge.com/tournaments/signup/h5XeIMi1mN#/signup/tp3i1s1ye1" target="_blank"> <button class="btn skewBg" style="color: black;">
+            <a href="https://challonge.com/fi/lahti_gbvsr_2026" target="_blank"> <button class="btn skewBg" style="color: black;">
 			If you're inteterest
       <br>
       in joining in as 
@@ -280,7 +280,7 @@
           Paid parking ends at 4 pm, so anywhere<br><br>
 
 					~ Time ~ <br>
-					27.12.2025 Saturday @ 14:00 - 22:00
+          15.03.2026 Sunday @ 14:00 - 22:00
           <br>
           15:00 Sign up for tournament ends
           <br>
@@ -289,7 +289,9 @@
 					<br>
 					~ Tournament game ~ 
 					<br>
-					BlazBlue Centralfiction
+          Granblue Fantasy Versus: Rising
+          <br>
+          (On PC in Steam)
 					</span>
 					<span style="font-size: 12px; text-align:left">
           ~ Rules ~
@@ -303,15 +305,29 @@
           The loser of a match can change their character, meanwhile the winner has to stay on their chosen character
           <br>
           <br>
-          Simple/basic mode for inputs is banned
+          In-game control scheme has to be Manual (not Smart or Super Ultimate)
           <br>
           <br>
           Tournament controllers (xbox 360 style controllers & PS4 controllers) are available for players, but you are welcome to bring your own controller. The only exception is a controller with built-in macro buttons
+          <br>
+          <br>
+          Lunalo (random select) is banned  
+          <br>
+          <br>
+          Random stage select (players may opt for an agreed stage)
           <br>
 					</span>
 					<span style="text-align:left">
 					~ Last tournament bracket ~ 
 					<br>
+          27.12.2025 - BlazBlue Centralfiction
+          <a href="https://challonge.com/796mqzof" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a>
+          <a href="https://www.youtube.com/watch?v=MDyu4Xejh0U" target="_blank"
+            style="color: DodgerBlue; margin-top:5px"><u>Vanilla edited in youtube</u></a>
+          <a href="https://www.twitch.tv/videos/2654155307" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Streemi
+              twitch:ssä</u></a>
+          ~~~
+          <br>
           24.10.2025 - Vampire Savior
 					<a href="https://challonge.com/2v6m2n82/" target="_blank" style="color: DodgerBlue;"><u>Results: Challonge</u></a> 
 					<a href="https://www.youtube.com/watch?v=2PPBKqMXhos" target="_blank" style="color: DodgerBlue; margin-top:5px"><u>Edited stream in youtube</u></a>
