--- a/en/home.html
+++ b/en/home.html
@@ -283,7 +283,7 @@
 
                 <figure class="card-banner img-holder">
                   <img src="../assets/images/events_images/gbvsr_banner.jpg" width="324" height="300" loading="lazy"
-                    alt="BlazBlue tournaus" class="img-cover"
+                    alt="gbvsr tournaus" class="img-cover"
                     style="border: 3px solid; border-color: var(--xiketic_90); background-color: var(--light-gray-1)">
                 </figure>
 
