--- a/en/lahtifgc_eng.html
+++ b/en/lahtifgc_eng.html
@@ -298,8 +298,8 @@ MARK: #Games we have
               <div class="blog-card">
 
                 <figure class="card-banner img-holder">
-                  <img src="../assets/images/events_images/GBVSR_banner.jpg" width="324" height="300" loading="lazy"
-                    alt="BlazBlue tournaus" class="img-cover" style="border: 3px solid; border-color: var(--xiketic_90); background-color: var(--light-gray-1)">
+                  <img src="../assets/images/events_images/gbvsr_banner.jpg" width="324" height="300" loading="lazy"
+                    alt="GBVSR turnaus" class="img-cover" style="border: 3px solid; border-color: var(--xiketic_90); background-color: var(--light-gray-1)">
                 </figure>
 
                 <div class="card-content">
