--- a/fi/lahtifgc.html
+++ b/fi/lahtifgc.html
@@ -295,7 +295,7 @@ MARK: #Games we have
 
                 <figure class="card-banner img-holder">
                   <img src="../assets/images/events_images/gbvsr_banner.jpg" width="324" height="300" loading="lazy"
-                    alt="BlazBlue tournaus" class="img-cover"
+                    alt="GBVSR tournaus" class="img-cover"
                     style="border: 3px solid; border-color: var(--xiketic_90); background-color: var(--light-gray-1)">
                 </figure>
 
