--- a/en/fighting.html
+++ b/en/fighting.html
@@ -122,8 +122,8 @@
             <h1 class="h1 hero-title" style="font-size: 45px;">
 			
               Fighting game tournament <span><img src="../assets/images/events_images/gbvsr.png"  loading="lazy"
-                  alt="BlazBlue Tournament"
-                  title="BlazBlue" style="width: 75%; height: 75%;"></span>
+                  alt="GBVSR Tournament"
+                  title="GBVSR" style="width: 75%; height: 75%;"></span>
             </h1>
 
             <p class="hero-text"><span>
