--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -123,8 +123,8 @@
               
              Taistelupeliturnaus 
              <span ><img src="../assets/images/events_images/gbvsr.png" loading="lazy"
-                  alt="BlazBlue Turnaus"
-                  title="BlazBlue" style="width: 75%; height: 75%;"></span>
+                  alt="GBVSR Turnaus"
+                  title="GBVSR" style="width: 75%; height: 75%;"></span>
              
             </h1>
             <p class="hero-text"><span>
