--- a/en/b-lista.html
+++ b/en/b-lista.html
@@ -173,8 +173,8 @@
         <div class="game-tabs">
           <a href="v-list.html" class="game-tab skewBg">Videogames</a>
           <a href="b-lista.html" class="game-tab active skewBg2">Boardgames</a>
-          <a href="b-lista.html" class="game-tab active skewBg2" style="padding:12px 15px">FIN</a>
-          <a href="b-list.html" class="game-tab skewBg" style="padding:12px 15px">ENG</a>
+          <a href="b-lista.html" class="game-tab active skewBg2">FIN</a>
+          <a href="b-list.html" class="game-tab skewBg">ENG</a>
         </div>
       </div>
 
