--- a/en/b-lista.html
+++ b/en/b-lista.html
@@ -183,6 +183,8 @@
         <label for="visit-date-select">Valitse vierailupäivä:</label>
         <select id="visit-date-select" class="visit-date-select">
           <option value="">Valitse päivä...</option>
+          <option value="2026-02-06">06.02.2026</option>
+          <option value="2026-02-13">13.02.2026</option>
           <option value="2026-02-27">27.02.2026</option>
           <option value="2026-03-06">06.03.2026</option>
           <option value="2026-03-13">13.03.2026</option>
