--- a/en/lan-party.html
+++ b/en/lan-party.html
@@ -139,7 +139,7 @@
 			<br>
 			<br>
 			Niemenkatu 73 (Lahti Science Park) Pöllö-auditorium, 15140 Lahti
-			<a href="https://maps.app.goo.gl/FhvkYQk6gyC4Nkhb6" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Google maps</u></a>	
+			<a href="https://maps.app.goo.gl/2QzjZqPSJuuRE6Cq9" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Google maps</u></a>	
 			<br>
 			Anybody over 16 years old can join in
 			</span></p>
