--- a/fi/lanit.html
+++ b/fi/lanit.html
@@ -141,7 +141,7 @@
 			<br>
 			<br>
 			Niemenkatu 73 (Lahden Tiedepuisto) Pöllö-auditoriossa, 15140 Lahti
-			<a href="https://maps.app.goo.gl/FhvkYQk6gyC4Nkhb6" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Google maps</u></a>	
+			<a href="https://maps.app.goo.gl/2QzjZqPSJuuRE6Cq9" target="_blank" class="blue_text" style="color: DodgerBlue;"><u>Google maps</u></a>	
 			<br>
 			Kaikki yli 16-vuotiaat voivat tulla mukaan
 			</span></p>
