--- a/fi/tappelu.html
+++ b/fi/tappelu.html
@@ -122,9 +122,9 @@
 			
               
              Taistelupeliturnaus 
-             <span ><img src="../assets/images/events_images/gbvsr.png" loading="lazy"
+             <span ><img src="../assets/images/events_images/gbvsr2.png" loading="lazy"
                   alt="GBVSR Turnaus"
-                  title="GBVSR" style="width: 75%; height: 75%;"></span>
+                  title="GBVSR"></span>
              
             </h1>
             <p class="hero-text"><span>
