--- a/en/fighting.html
+++ b/en/fighting.html
@@ -121,9 +121,9 @@
 
             <h1 class="h1 hero-title" style="font-size: 45px;">
 			
-              Fighting game tournament <span><img src="../assets/images/events_images/gbvsr.png"  loading="lazy"
+              Fighting game tournament <span><img src="../assets/images/events_images/gbvsr2.png"  loading="lazy"
                   alt="GBVSR Tournament"
-                  title="GBVSR" style="width: 75%; height: 75%;"></span>
+                  title="GBVSR"></span>
             </h1>
 
             <p class="hero-text"><span>
